# hypervisor-rust

./: COMPARISON_REPORT.md  COMPLETION_REPORT.md  Cargo.toml  HONEST_ASSESSMENT.md  README.md  build.sh  build_simple.sh  linker.ld  run_tests.sh  test_qemu.sh  x86_64-unknown-none.json
bootloader/: Cargo.toml
bootloader/src/: bootloader_impl.rs  driver_injection.rs  driver_injection_complete.rs  driver_loader.rs  driver_processing.rs  driver_processing_fixed.rs  efi_driver.rs  hypervisor_loader.rs  lib.rs  main.rs  my_smm_payload.rs  smm_handler.rs  smm_handler_real.rs  smm_hypervisor_loader.rs  smm_payload_binary.rs  uefi.rs  uefi_driver_injector.rs  uefi_stubs.rs  uefi_support.rs
bootloader/tests/: integration_tests.rs
drivers/: Cargo.toml
drivers/kernel-driver/: Cargo.toml
drivers/kernel-driver/src/: driver_main.rs  ioctl.rs  lib.rs  memory.rs  mm_techmad.rs  pe_loader.rs  plugin_system.rs  techmad.rs
drivers/kernel-driver/src/plugins/: anti_debug_detection.rs  anti_debug_detection_fixed.rs  mod.rs
drivers/plugins/anti-debug/: Cargo.toml
drivers/plugins/anti-debug/src/: lib.rs
drivers/plugins/driver-protection/: Cargo.toml
drivers/plugins/driver-protection/src/: lib.rs
drivers/plugins/memory-forensics/: Cargo.toml
drivers/plugins/memory-forensics/src/: lib.rs
drivers/plugins/patchguard-bypass/: Cargo.toml
drivers/plugins/patchguard-bypass/src/: lib.rs
drivers/smm-driver/: Cargo.toml
drivers/smm-driver/src/: lib.rs
drivers/src/: lib.rs
hwid-spoofer/: Cargo.toml
hwid-spoofer/src/: acpi.rs  disk.rs  efispoofer_complete.rs  hwid_spoofer_complete.rs  lib.rs  network.rs  nvme.rs  pci.rs  smbios.rs  tpm.rs  usb.rs  variables.rs
hypervisor/: Cargo.toml
hypervisor/src/: config_parser.rs  devices.rs  ept_npt.rs  gdb_stub.rs  guest_agent.rs  guest_loader.rs  guest_memory.rs  hypervisor_core.rs  interrupts.rs  interrupts_isr.rs  interrupts_old.rs  io.rs  ioapic.rs  iommu.rs  lib.rs  live_migration.rs  loader.rs  logging.rs  main.rs  memory.rs  memory_allocator.rs  memory_scanner.rs  network.rs  pe_loader.rs  plugin.rs  process_hollowing.rs  profiling.rs  scheduler.rs  storage.rs  svm.rs  svm_complete.rs  tests.rs  vcpu.rs  vcpu_stub.rs  virtio.rs  vm_exit_handlers.rs  vm_management_api.rs  vm_manager.rs  vm_migration.rs  vm_monitoring.rs  (+6 more)
hypervisor/src/plugins/: all_plugins.rs  anti_detection.rs  forensics.rs  hardware.rs  integrity.rs  memory.rs  mod.rs  network.rs  process.rs  real_plugins.rs  stealth.rs
hypervisor/tests/: plugin_tests.rs
src/: lib.rs  main.rs
uefi-runtime/: Cargo.toml
uefi-runtime/src/: boot_services.rs  lib.rs  protocols.rs  runtime_services.rs
