[package]
name = "hypervisor-rust"
version = "0.1.0"
edition = "2021"
authors = ["Hypervisor Team"]
description = "Type-1 Bare Metal Hypervisor in Rust with UEFI support"

[workspace]
members = [
    "bootloader",
    "hypervisor",
    "uefi-runtime",
    "drivers",
]

# Main hypervisor library
[lib]
name = "hypervisor_rust"
path = "src/lib.rs"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[dependencies]
# Core dependencies for bare metal
core = { version = "0.0.0", optional = true }
compiler_builtins = { version = "0.1.85", features = ["mem"] }
linked_list_allocator = "0.10"

# x86_64 specific
x86_64 = "0.14"
raw-cpuid = "11.0"
bit_field = "0.10"

# UEFI support
uefi = "0.26"
uefi-services = "0.23"

# Memory management
bootloader = "0.10"
volatile = "0.4"
spin = "0.9"

# Logging
log = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3

# For bootloader
[package.metadata.bootloader]
minimum-framebuffer-height = 200

# Target specification for bare metal
[target.x86_64-unknown-none]
linker = "rust-lld"

# Features for different capabilities
[features]
default = ["uefi-boot"]
uefi-boot = []
legacy-boot = []
vmx = []  # Intel VT-x
svm = []  # AMD-V
nested-virt = []
iommu = []