[workspace]
members = [
    "hypervisor",
    "bootloader",
    "hwid-spoofer",
    "drivers/kernel-driver",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Hypervisor Team"]

[workspace.dependencies]
# Core dependencies
log = "0.4"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"

# x86_64 specific
x86_64 = "0.14"
x86 = "0.52"
raw-cpuid = "11.0"

# UEFI
uefi = { version = "0.26", features = ["alloc"] }
uefi-services = "0.23"

# Memory
linked_list_allocator = "0.10"
volatile = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1