[package]
name = "hypervisor-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.26", features = ["alloc", "global_allocator", "logger"] }
uefi-services = "0.23"
log = "0.4"
xmas-elf = "0.9"
x86_64 = "0.14"

[build-dependencies]
cc = "1.0"

# UEFI requires specific target
[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"