[workspace]
members = [
    "kernel-driver",
    "smm-driver",
    "plugins/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hypervisor-Rust Team"]

[workspace.dependencies]
winapi = { version = "0.3", features = ["ntdef", "winnt", "wdm"] }
ntapi = "0.4"
wdk-sys = "0.1"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }