[package]
name = "hypervisor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14"
x86 = "0.52"
raw-cpuid = "11.0"
bit_field = "0.10"
bitflags = "2.4"
spin = "0.9"
linked_list_allocator = "0.10"
log = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
lto = true
opt-level = 3