[package]
name = "hypervisor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = { version = "0.14", features = ["instructions"] }
x86 = "0.52"
raw-cpuid = "11.0"
bit_field = "0.10"
bitflags = "2.4"
spin = "0.9"
linked_list_allocator = "0.10"
log = { version = "0.4", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }


[features]
default = []

[lib]
crate-type = ["staticlib"]

